--- a/.github/workflows/news-cron.yml
+++ b/.github/workflows/news-cron.yml
@@ -21,7 +21,7 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Fetch News
         run: node scripts/fetchNews.js
