--- a/.github/workflows/news-cron.yml
+++ b/.github/workflows/news-cron.yml
@@ -33,6 +33,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
 
       - name: Deploy to GitHub Pages
         run: npm run deploy
